--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Prerequisites
+*.d
+
 # Object files
 *.o
 *.ko
@@ -27,6 +30,8 @@
 *.i*86
 *.x86_64
 *.hex
+*.bin
+*.elf
 
 # Debug files
 *.dSYM/
